[package]
name = "schwebebahndisruption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }